--- a/_template/index.html
+++ b/_template/index.html
@@ -6,6 +6,6 @@
 	<title>App</title>
 </head>
 <body>
-	<script src="./js/script.js"></script>
+	<script src="./js/index.js"></script>
 </body>
 </html>
